# executorch-vision

./: .clang-format  CMakeLists.txt  Makefile
.github/workflows/: ci.yml
include/: executorch_vision.h  model.h  parakeet.h
src/: executorch_vision.cpp  main.cpp  model.cpp  parakeet.cpp
tests/: executorch_vision_test.cpp  parakeet_test.cpp
